--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URL = mongodb+srv://qurmathe:3x2b8Sr6feAQSTZ1@cluster0.thp2dpx.mongodb.net/shop?retryWrites=true&w=majority
+# MONGO_URL = mongodb+srv://qurmathe:3x2b8Sr6feAQSTZ1@cluster0.thp2dpx.mongodb.net/shop?retryWrites=true&w=majority
 
-PORT = 5500
+# PORT = 5500
 
-PASS_SEC = ovcharenko
-JWT_SEC = ovcharenko
+# PASS_SEC = ovcharenko
+# JWT_SEC = ovcharenko
